fix inconsistent rendering of horizontal rule on mobile phones

--- a/support-frontend/assets/components/legal/termsPrivacy/termsPrivacy.scss
+++ b/support-frontend/assets/components/legal/termsPrivacy/termsPrivacy.scss
@@ -44,6 +44,12 @@
     margin-left: -($gu-h-spacing * 1.25);
     margin-right: -($gu-h-spacing * 1.25);
   }
+
+  @include mq($from: mobile) {
+    margin-left: -($gu-h-spacing * 1.25);
+    margin-right: -($gu-h-spacing * 1.25);
+  }
+
   @include mq($from: leftCol) {
     margin-left: -($gu-h-spacing * 4.25);
     margin-right: -($gu-h-spacing * 4.25);
